# third_party_sane-airscan

./: BUILD.gn  OAT.xml  README.OpenSource  README_OpenHarmony.md  bundle.json  patch_install.py
patches/: oh-transplant.patch  patches.json
